# ChangeLog for catalyst
# Copyright 1999-2009 Gentoo Foundation; 2008-2009 Various authors (see AUTHORS)
# Distributed under the GPL v2
# $Id$

  12 Sep 2009; Andrew Gaffney <agaffney@gentoo.org> TODO,
  modules/catalyst/target/generic.py:
  Add ability to invalidate all further autoresume points

  12 Sep 2009; Andrew Gaffney <agaffney@gentoo.org> catalyst:
  Remove another unnecessary intermediary variable

  12 Sep 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/config.py:
  Add ability to specify default values for all specs and add
  rel_type=default to it

  12 Sep 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/generic_stage.py:
  Set a default value for livecd/iso

  12 Sep 2009; Andrew Gaffney <agaffney@gentoo.org> catalyst:
  Move commandline parsing to function

  12 Sep 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/config.py, modules/catalyst/target/generic.py:
  Stick optional config file values in a tuple and concatenate with required
  values

  12 Sep 2009; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/livecdfs-update.sh:
  Apply patch from Gentoo bug #284585

  03 Sep 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> catalyst:
  Change my email address to point to my current address rather than my now
  defunct Gentoo address.

  03 Sep 2009; Chris Gianelloni <wolf31o2@wolf31o2.org> AUTHORS,
  +.gitattributes, README, TODO, catalyst:
  Adding .gitattributes and adding an Id variable to AUTHORS, ChangeLog,
  README, TODO, and catalyst.

  23 Aug 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/livecd_stage2.py:
  Apply patch for module blacklisting from gentoo bug #282148

  28 Jun 2009; Andrew Gaffney <agaffney@gentoo.org> files/livecd/README.txt,
  files/livecd/x86-F6.msg:
  Apply patch to document espeakup support for gentoo bug #267708

  07 Apr 2009; Andrew Gaffney <agaffney@gentoo.org> catalyst,
  modules/catalyst/config.py: